# conway

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_mac.sh  build_tests.sh  life.c
.github/workflows/: tests.yml
arm/: Makefile  buffer.c  conway.c  conway.ld  display.c  display.h  i2c.c  i2c.h  startup.s  vectors.s
bird/: bird.c  bird.h
common/: life_assert.h  lut.h  qmath.c  qmath.h  trig.c  trig.h
desktop/: Makefile  conway.c  emulator.c  life.c
life/: life.c  life.h
scripts/: gen_lut.py
tests/: fp_tests.c  fp_tests.h  movement_tests.c  movement_tests.h  qmath_tests.c  qmath_tests.h  tests.c  trig_tests.c  trig_tests.h
